tests/gen-test/test_out/struct-constructor-parse-out.txt
error: expected '\n' | ';' but got ','
 --> struct-constructor\root.ctl:1:130
  |
1 | struct OnStack { a : uint ; b : uint } ; struct InRegister { a : u32 ; b : u32 } ; #[entry] ; fn main -> uint { OnStack \ { a : 1, b : 2 } ; InRegister \ { a : 3, b : 1 } ; 0 } ;
  |                                                                                                                                  ^ token located here
  |
  = info: list -> item -> function definition -> function body -> list -> expr -> unit expr -> struct constructor -> list

error: expected '\n' | ';' but got ','
 --> struct-constructor\root.ctl:1:162
  |
1 | struct OnStack { a : uint ; b : uint } ; struct InRegister { a : u32 ; b : u32 } ; #[entry] ; fn main -> uint { OnStack \ { a : 1, b : 2 } ; InRegister \ { a : 3, b : 1 } ; 0 } ;
  |                                                                                                                                                                  ^ token located here
  |
  = info: list -> item -> function definition -> function body -> list -> expr -> unit expr -> struct constructor -> list

